--- a/category-course.html
+++ b/category-course.html
@@ -265,7 +265,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -280,7 +280,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -295,7 +295,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -310,7 +310,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -325,7 +325,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -340,7 +340,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -355,7 +355,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -370,7 +370,7 @@
                               <span
                                 class="flex w-4 h-4 justify-center items-center"
                                 ><img
-                                  src="assets/img/left-default.webp"
+                                  src="assets/img/icons/left-default.webp"
                                   alt="left-0"
                                   width="100%"
                               /></span>
@@ -511,7 +511,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -528,7 +528,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -545,7 +545,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -562,7 +562,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -579,7 +579,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -596,7 +596,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -613,7 +613,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -630,7 +630,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -698,7 +698,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -715,7 +715,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -732,7 +732,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -749,7 +749,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -766,7 +766,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -783,7 +783,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -800,7 +800,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -817,7 +817,7 @@
                                       <span
                                         class="flex w-4 h-4 justify-center items-center"
                                         ><img
-                                          src="assets/img/left-default.webp"
+                                          src="assets/img/icons/left-default.webp"
                                           alt="left-0"
                                           width="100%"
                                       /></span>
@@ -3574,7 +3574,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
@@ -3585,7 +3585,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
@@ -3596,7 +3596,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
@@ -3607,7 +3607,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
@@ -3618,7 +3618,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
@@ -3629,7 +3629,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
@@ -3640,7 +3640,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
@@ -3651,7 +3651,7 @@
                     <span class="underline">Food Hygiene</span>
                     <span class="flex w-4 h-4 justify-center items-center"
                       ><img
-                        src="assets/img/left-default.webp"
+                        src="assets/img/icons/left-default.webp"
                         alt="left-0"
                         width="100%"
                     /></span>
